--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.1.0",
     "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
