--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.1.0",
     "@stitches/react": "^1.2.6",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
